Mise à jour du affichage du option sans Delivery

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -921,6 +921,7 @@ delivery:
   title: Home delivery
   standard: Standard
   express: Express
+  none: 'Sans livraison (retrait sur place)'
   details: "Delivery details"
   title0: "Delivery"
   tracking_number: "Tracking number"
